--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ table {
 #Home{
 	background-image: url("images/Portfolio_Background_9.jpg");	
 	background-repeat: no-repeat;
-	width: 100vw;
-	height: 100vh;	
+	width: 100%;
+	height: 100%;	
 	margin:0 auto;
 }
 #Home a{
