--- a/style.css
+++ b/style.css
@@ -12,6 +12,12 @@ table {
 	background-image: url("images/Portfolio_Background_9.jpg");		
 	background-repeat: no-repeat;
 	margin:0 auto;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	height : 100vh;
+	width : 100%;
 }
 #Home a{
 	position: absolute;
@@ -55,6 +61,7 @@ i{
 section{
 	height: 100vh;
 	float: left;
+	width: 100%;
 }
 body{
 
