--- a/style.css
+++ b/style.css
@@ -1,12 +1,6 @@
-
-table {
-	padding: 10px;
-	background-color: #ac7331;
-	margin: auto;
-	border-radius: 25px;
-}
-.t-head{
-	font-weight: bold;
+body{
+	font-family: Arial, Helvetica, sans-serif;
+	color: #333;	
 }
 #Home{
 	background-image: url("images/Portfolio_Background_9.jpg");		
@@ -19,28 +13,51 @@ table {
 	height : 100vh;
 	width : 100%;
 }
-#Home a{
-	position: absolute;
+.main-container{
+	font-size: 36px;
+	color: rgb(168, 174, 196);
+	width: 100%;
+	margin: 0 auto;
+}
+#Home .row{
+	transform: translate(-50%, -50%);
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -50%);
-	color: whitesmoke;
-	font-size: 60px;
+}
+.row{
+	padding: 30px;
+	width: 100%;
+	position: absolute;	
+	border-radius: 10px;
+}
+.col1{
+	text-align: center;
 	font-family: Timmana, sans-serif;
 }
-#Home a b{
-	color: maroon;
+.col2{
+	text-align: center;
+	font-family: Timmana, sans-serif;
 }
-#Home a b:hover{
-	color: green;
+a, ul{
+	color: whitesmoke;
+	font-size: 20px;
+}
+b{
+	color: rgb(156, 45, 45);
+}
+b:hover{
+	color: rgb(63, 155, 63);
 }
 #button-link{
 	border: 2px solid gray;
-	text-align: center;
-	vertical-align: center;
+	padding-right: 20px;
+	padding-left: 10px;
 	width: 35%;		
 	margin: 0 auto;
 	visibility: hidden;
+	font-size: 60px;
+	line-height: 72px;
+	border-radius: 10px;
 }
 i{
 	border: solid black;
@@ -58,13 +75,28 @@ i{
 	border: solid #540032;
 	border-width: 0 5px 5px 0;
 }
+#typewriter{
+	font-size: 60px;
+}
 section{
 	height: 100vh;
 	float: left;
 	width: 100%;
 }
-body{
-
+#About .row{
+	padding: 1%;
+	background-color: rgb(190, 31, 31);
+}
+.col-left{
+	width: 54%;
+}
+.col-right{
+	width: 34%;
+}
+.col-left, .col-right{
+	float: left;
+	padding-left: 2%;
+	padding-right: 2%;
 }
 #Skill table{
 	background-color: silver;
@@ -91,11 +123,11 @@ h1{
 	color: white;
 }
 img{
-	padding: 0;
     display: block;
     margin: 0 auto;
     max-height: 100%;
 	max-width: 100%;
+	border-radius: 6px;
 }
 .tdright{
 	width: 35%;
