--- a/style.css
+++ b/style.css
@@ -19,16 +19,12 @@ body{
 	width: 100%;
 	margin: 0 auto;
 }
-#Home .row{
-	transform: translate(-50%, -50%);
-	top: 50%;
-	left: 50%;
-}
 .row{
 	padding: 30px;
 	width: 100%;
-	position: absolute;	
 	border-radius: 10px;
+	display: block;
+	float: left;
 }
 .col1{
 	text-align: center;
@@ -79,12 +75,16 @@ i{
 	font-size: 60px;
 }
 section{
-	height: 100vh;
 	float: left;
 	width: 100%;
+	padding-top: 1.5%;
+	padding-bottom: 1.5%;
 }
 #About .row{
 	background-color: rgb(190, 31, 31);
+}
+#Contact .row{
+	background-color: rgb(65, 67, 83);
 }
 .col-left{
 	width: 54%;
@@ -105,22 +105,6 @@ section{
 	width: 100%;
 	margin: auto;
 }
-#leftP, #rightP{
-	width: 48.5vw;
-	margin: auto;
-}	
-#leftP{
-	float: left;
-}
-#rightP{
-	float: left;
-}
-h1{
-	font-weight: bold;
-	text-align: center;
-	font-size: 50px;
-	color: white;
-}
 img{
     display: block;
     margin: 0 auto;
@@ -128,57 +112,22 @@ img{
 	max-width: 100%;
 	border-radius: 6px;
 }
-.tdright{
-	width: 35%;
+.col-1{
+	width: 60%;
+	padding: 1%;
 }
-.heading{
-	font-weight: bold;
-	font-size: 36px;
-}
-.footer{
-	bottom: 50%;
-}
-
-.footertable{
-	text-align: center;
-	border-radius: 0px;
-	padding: 0;
-	background-color:#79867b;
-}
-.media{
+.col-2{
 	width: 10%;
+	padding: 1%;
 }
-.header{
-	background-color: #333;
-	overflow: hidden;
-	position: fixed;
-	width: 30%;
+.col-3{
+	width: 10%;
+	padding: 1%;
+}
+.col-4{
+	width: 10%;
+	padding: 1%;
+}
+.col-1, .col-2, .col-3, .col-4{	
 	float: left;
-}
-.header a{
-	display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-	font-size: 17px;
-	float: left;
-}
-.header a:hover{
-	background-color: #ddd;
-    color: black;
-}
-.header a.active{
-	background-color: #4CAF50;
-    color: white;
-}
-.fa {
-    padding: 20px;
-    font-size: 30px;
-    width: 50px;
-    text-align: center;
-    text-decoration: none;
-}
-.fa:hover {
-    opacity: 0.7;
 }
