--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,7 @@ img{
 /* ===== About us ===== */
 .abhishek-image img{
 	margin-top: 80px;
+	text-align: center;
 }
 .About h3{
 	padding-top: 20px;
