--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,12 @@ body{
 }
 
 /* ===== Generic CSS ====== */
-.section{
-	padding-bottom: 10px;
+section{
+	
 }
 .section-header{
-	padding-top: 30px;
-	padding-bottom: 20px;
+	padding-top: 60px;
+	padding-bottom: 40px;
 }
 .section-header h2{
 	position: relative;
@@ -95,12 +95,11 @@ body{
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	-webkit-background-size: cover;
-	/*height: 100vh;*/
+	height: 100vh;
 }
 .header-overlay{
 	background-color: rgba(31, 31, 31, 0.60);
 	height: 100%;
-	padding-bottom: 70px;
 }
 b{
 	color: rgb(156, 45, 45);
@@ -167,314 +166,64 @@ b:hover{
 	-moz-transition: all 1s;
 	border-radius: 10px;
 }
-
-.typewriter{
+#typewriter{
 	font-size: 60px;
 	font-weight: 300;
 	line-height: 75px;
 	text-align: center;
 	padding-top: 12%;
-	color: whitesmoke;
-	overflow: hidden; /* Ensures the content is not revealed until the animation */	
-	white-space: nowrap; /* Keeps the content on a single line */
-	margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-	animation: typing 2.2s steps(30, end);
-}
-.b{
-	font-size: 60px;
-	font-weight: 300;
-	line-height: 75px;
-	text-align: center;
-	padding-top: 0px;
 	padding-bottom: 10px;
 	color: whitesmoke;
-	overflow: hidden; 
-	white-space: nowrap; 
-	margin: 0 auto; 
-	opacity: 0;
-	animation: typing2 2.2s steps(30, end);
-	animation-delay: 1.5s;
-	-o-animation-delay: 1.5s;
-	-webkit-animation-delay: 1.5s;
-	-moz-animation-delay: 1.5s;
-	animation-fill-mode: forwards;
-	-webkit-animation-fill-mode: forwards;
-	-o-animation-fill-mode: forwards;
-	-moz-animation-fill-mode: forwards;
-}
-/* The typing effect */
-@keyframes typing {
-from { width: 0 }
-to { width: 100% }
-}
-@keyframes typing2 {
-	0% {
-		width: 0;
-	}
-	1%{
-		opacity: 1;
-	}
-	100%{
-		width: 100%;
-		opacity: 1;
-	}
 }
 img{
 	margin: 10px;
 }
+.btn-dwnld{
+	margin: 40px;
+}
 /* ===== About us ===== */
-.About .row{
-	padding-top: 10px;
-}
 .abhishek-image img{
-	display: block;
-	margin: auto;
-	padding-bottom: 10px;
-}
-.picbox p{
-	padding-top: 10px;
-	font-size: 16px;
-	font-weight: 500;
-}
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
-.skillbar {
-  font-family: 'Open Sans', 'sans-serif';
-	position:relative;
-	display:block;
-	margin-bottom:15px;
-	width:100%;
-	background:#eee;
-	height:35px;
-	border-radius:3px;
-	-moz-border-radius:3px;
-	-webkit-border-radius:3px;
-	-webkit-transition:0.4s linear;
-	-moz-transition:0.4s linear;
-	-ms-transition:0.4s linear;
-	-o-transition:0.4s linear;
-	transition:0.4s linear;
-	-webkit-transition-property:width, background-color;
-	-moz-transition-property:width, background-color;
-	-ms-transition-property:width, background-color;
-	-o-transition-property:width, background-color;
-	transition-property:width, background-color;
-}
-
-.contact{
-	position: relative;
-	padding-bottom: 30px;
-}
-.contact .contact-d{
-	position: absolute;
-}
-.contact h3{
-	font-size: 22px;
-	font-weight: 700;
-}
-.contact-details{
-	position: relative;
-}
-.contact-details i{
-	position: absolute;
-	top: 0;
-}
-.contact-details p{
-	padding-left: 25px;
-}
-.contact .dwnld{
-	padding-left: 240px;
-}
-.skillbar-title {
-	position:absolute;
-	top:0;
-	left:0;
-	width: 100px;
-	font-weight:bold;
-	font-size:16px;
-	color:#fff;
-	background:#6adcfa;
-	-webkit-border-top-left-radius:3px;
-	-webkit-border-bottom-left-radius:4px;
-	-moz-border-radius-topleft:3px;
-	-moz-border-radius-bottomleft:3px;
-	border-top-left-radius:3px;
-	border-bottom-left-radius:3px;
-}
-.skillbar-title span {
-	display:block;
-	background:rgba(0, 0, 0, 0.1);
-	padding:0 20px;
-	height:35px;
-	line-height:35px;
-	-webkit-border-top-left-radius:3px;
-	-webkit-border-bottom-left-radius:3px;
-	-moz-border-radius-topleft:3px;
-	-moz-border-radius-bottomleft:3px;
-	border-top-left-radius:3px;
-	border-bottom-left-radius:3px;
-}
-
-.skillbar-bar {
-	height:35px;
-	width:0px;
-	background:#6adcfa;
-	border-radius:3px;
-	-moz-border-radius:3px;
-	-webkit-border-radius:3px;
-}
-.skill-bar-percent {
-	position:absolute;
-	right:10px;
-	top:0;
-	font-size:14px;
-	height:35px;
-	line-height:35px;
-	color:#444;
-	color:rgba(0, 0, 0, 0.7);
-}
-/* ====== Academics and Work Experience ===== */
-.Acads{
-	background-color: #edeff4;
-}
-.desc-header h3{
+	margin-top: 80px;
 	text-align: center;
-	font-size: 32px;
-	font-weight: 500;
+}
+.About h3{
+	padding-top: 20px;
+	color: #343434;
+	text-transform: uppercase;
+	font-size: 24px;
+	font-weight: 600;
 }
 .school{
 	position: relative;
-	margin-top: 40px;
-}
-.school img{
-	transition: all 1s;
-	-moz-transition: all 1s;
-	-o-transition: all 1s;
-	-webkit-transition: all 1s;
-	position: absolute;
-	top:0;
-	left:0;
-}
-.school .school-text{
-	padding-left: 150px;
-	padding-top: 20px;
-	padding-bottom: 30px;
-	margin-top: 20px;
-	transition: all 1s;
-	-o-transition: all 1s;
-	-moz-transition: all 1s;
-	-webkit-transition: all 1s;
-}
-.glowing-border {
-    border: 2px solid #9ecaed;
-	border-radius: 7px;
-	box-shadow: 0 0 4px #9ecaed;
-	-o-box-shadow: 0 0 4px #9ecaed;
-	-moz-box-shadow: 0 0 4px #9ecaed;
-	-webkit-box-shadow: 0 0 4px #9ecaed;
-}
-.school:hover{
-	background-color: #add5f7;
-}
-.school .school-text .school-text-gen{
-	text-align: center;
-	opacity: 1;
-	transition: all 1s;
-	-o-transition: all 1s;
-	-moz-transition: all 1s;
-	-webkit-transition: all 1s;
-}
-.school .school-text:hover .school-text-gen{
-	opacity: 0;
-}
-.school .school-text .school-text-info{
-	position: absolute;
-	top: 40px;
-	padding-left: 80px;
-	padding-bottom: 40px;
-	opacity: 0;
-	transition: all 1s;
-	-o-transition: all 1s;
-	-moz-transition: all 1s;
-	-webkit-transition: all 1s;
-	text-align: center;
-}
-.school-text-info bo{
-	font-weight: 500;
-	font-size: 24px;
-}
-.school .school-text:hover .school-text-info{
-	opacity: 1;
+	padding-bottom: 45px;
+	padding-left: 160px;
 }
 .job{
-	margin-top: 10px;
 	position: relative;
-	padding-bottom: 50px;
-	transition: all 1s;
-	-o-transition: all 1s;
-	-moz-transition: all 1s;
-	-webkit-transition: all 1s;
-}
-.job-descriptions{
 	padding-bottom: 20px;
+	padding-left: 160px;
 }
-.job-gen{
-	transition: all 1s;
-	-o-transition: all 1s;
-	-moz-transition: all 1s;
-	-webkit-transition: all 1s;
-}
-.job .job-gen h4{
-	padding-top: 60px;
-}
-.job-info{
+.job div, .school div{
 	position: absolute;
-	transition: all 1s;
-	-o-transition: all 1s;
-	-moz-transition: all 1s;
-	-webkit-transition: all 1s;
+	top: 0;
+	left: 0;	
 }
-.job-info h5{
-	font-size: 22px;
-}
-.job-info p{
-	padding: 0px 10px;
-}
-.job div img{
-	position: absolute;
-	left: 0;
+.job div img, .school div img{
 	transition: all 1s;
 	-moz-transition: all 1s;
 	-o-transition: all 1s;
 	-webkit-transition: all 1s;
 }
 .job h4, .school h4{
+	padding-top: 20px;
 	color: #343434;
 	text-transform: uppercase;
 	font-size: 20px;
 	font-weight: 600;
 }
-.job h4{
-	padding-top: 40px;
-	padding-left: 180px;	
-}
-.job-info{
-	opacity: 0;
-	position: absolute;
-	top: 15px;
-	padding: 0px 15px;
-}
-.job:hover .job-gen{
-	opacity: 0;
-}
-.job:hover{
-	background-color: #add5f7;
-}
-.job:hover .job-info{
-	opacity: 1;
-}
 .job p, .school p{
 	color: #727272;
-	font-size: 13px;
+	font-size: 15px;
 }
 
 /* ========= Projects =============*/
@@ -538,6 +287,7 @@ img{
 	-o-transition: all 1s;
 	-moz-transition: all 1s;
 	-webkit-transition: all 1s;
+	margin-top: 20px;
 }
 .btn-view:hover{
 	border: 1px solid black;
@@ -557,4 +307,19 @@ img{
 }
 
 /* ========= Contact ======= */
-
+.contact-overlay{
+	background-size: cover;
+	background-color: rgba(59, 59, 59, 0.7);
+	padding-top: 20px;
+}
+.contact-details{
+	position: relative;
+}
+.contact-details i{
+	position: absolute;
+	left: 0;
+	top: 0;	
+}
+.contact-details p{
+	padding-left: 20px;
+}
