--- a/css/style.css
+++ b/css/style.css
@@ -491,20 +491,13 @@ img{
 .projects-overlay{
 	background-color: rgba(31, 31, 31, 0.75);
 	padding-top: 20px;
-	padding-bottom: 80px;
-}
-.carousel-indicators{
-	bottom: -40px;
-}
-.carousel-inner .item img{
-	border: 2px solid #129cf3;
-	padding: 3px;
+	padding-bottom: 40px;
 }
 .Projects h2{
 	color: #d8d8d8;
 }
 .project-caption{
-	padding-bottom: 70px; 
+	padding-bottom: 40px; 
 }
 .project-caption h2{
 	color: #129cf3;
@@ -528,6 +521,8 @@ img{
 	font-size: 18px;
 	line-height: 27px;
 	padding-top: 35px;
+	padding-left: 60px;
+	padding-right: 60px;
 }
 .btn-view{
 	background-color: #129cf3;
